--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <div id="js-map"></div>
     
+    <div class="containerOverlay">
+        <span id="textoOverlay">Marcador</span>
+    </div>
+
     <script src="./libs/v6.3.1-dist/ol.js"></script>
     <script src="./main.js"></script>
 </body>
