--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <div id="js-map"></div>
     
     <div class="containerOverlay">
-        <span id="textoOverlay">Marcador</span>
+        <span id="Station"></span>
+        <span id="Last"></span>
+        <span id="Size"></span>
+        <span id="Received"></span>
+        <span id="Status"></span>
     </div>
 
     <script src="./libs/v6.3.1-dist/ol.js"></script>
