--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="js-map"></div>
-    
+
     <div class="containerOverlay">
         <span id="Station"></span>
         <span id="Last"></span>
@@ -18,6 +18,7 @@
     </div>
 
     <script src="./libs/v6.3.1-dist/ol.js"></script>
+    <script src="./carregaMarcadores.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
