Enviando dados pela api, botão de atualizar marcadores.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span id="Received"></span>
         <span id="Status"></span>
     </div>
-
+    <button id="btnAtualizar" onclick="atualizarLayerMarcadores(marcadoresLayer)">Atualizar Marcadores</button>
     <script src="./libs/v6.3.1-dist/ol.js"></script>
     <script src="./carregaMarcadores.js"></script>
     <script src="./main.js"></script>
