> Recuperando log da API > Escolhendo log para se exibido

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="filtro">
+        <select name="droplist-logs" id="droplist-logs" onchange="mudarLogExibido()"></select>
         <div class="divInput"><input type="checkbox" checked id="estacoes-desativadas" onchange="ocultarLayerEstacoesDesativadas()"> Estações Desativadas</div>
         <div class="divInput"><input type="checkbox" checked id="estacoes-ativadas" onchange="ocultarLayerEstacoesAtivadas()"> Estações em Funcionamento</div>
     </div>
