--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="filtro">
         <input type="date" name="data-logs" id="data-logs" min="2020-05-14" onchange="obterDataSelecionada()">
         <select name="droplist-logs" id="droplist-logs" onchange="obterLogSelecionado()">
-            <option value="-">Log atual</option>
+            <option value="-" selected>Log atual</option>
         </select>
         <div class="divInput"><input type="checkbox" checked id="estacoes-desativadas" onchange="ocultarLayerEstacoesDesativadas()"> Estações Desativadas</div>
         <div class="divInput"><input type="checkbox" checked id="estacoes-ativadas" onchange="ocultarLayerEstacoesAtivadas()"> Estações em Funcionamento</div>
