> Exibindo a data e hora dos logs durante a iteração de datas.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="divInput"><input type="checkbox" checked id="estacoes-ativadas" onchange="ocultarLayerEstacoesAtivadas()"> Estações em Funcionamento</div>
 
         <div class="divIteracao">
+            <p id="data-info"></p>
             <input type="date" name="data-logs" id="data-um" min="2020-05-17">
             <input type="date" name="data-logs" id="data-dois" min="2020-05-17">
             <button id="botaoIteracao" onclick="iterarEntreDatas()"><img src="./img/botao-proximo.png" id="imagemBotaoProximo"></button>
