--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         <div class="divIteracao">
             <p id="data-info"></p>
-            <input type="date" name="data-logs" id="data-um" min="2020-05-17">
-            <input type="date" name="data-logs" id="data-dois" min="2020-05-17">
+            <input type="date" name="data-um" id="data-um" min="2020-05-17">
+            <input type="date" name="data-dois" id="data-dois" min="2020-05-17">
             <button id="botaoIteracao" onclick="iterarEntreDatas()"><img src="./img/botao-proximo.png" id="imagemBotaoProximo"></button>
         </div>
     </div>
